# sketchrec

./: LICENSE  README.md  autogen.sh  configure.ac
data/: map_id_label.txt  sketches_svg.zip.sha1
src/: Makefile.am  cats.cpp  classify.cpp  conv.h  cross.cpp  features.h  gui.cpp  io.h  kmeans.h  svg.cpp  svg.h  svm.h  types.h  util.cpp  util.h  vocab.cpp
util/: data-fold  get-data  run-cats  run-classify  run-cross  run-vocab
